<resources>
    <string name="app_name">teachersprivacy</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="rational_permission">rational_permission</string>
    <string name="denied_permission">denied_permission</string>
    <string name="call_history">통화기록</string>
    <string name="students">학생목록</string>
    <string name="setting">설정</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="error_read_csv_title">파일오류</string>
    <string name="error_read_csv_message">도움말을 확인해 주세요.</string>
    <string name="add_manual">직접입력</string>
    <string name="load_file">파일 불러오기</string>
    <string name="edit">편집하기</string>
    <string name="phone_number">전화</string>
    <string name="address">주소</string>
    <string name="enter_memo">메모를 남겨보세요.</string>
    <string name="confirm">완료</string>
    <string name="delete_student">삭제</string>
    <string name="delete_student_sub">이 학생의 데이터를 삭제할까요?</string>
    <string name="name">이름</string>
    <string name="parent_phone_number">학부모</string>
    <string name="teacher_settings">선생님 관련 설정</string>
    <string name="school_name">학교명</string>
    <string name="grade_class">학년/반</string>
    <string name="evaluate">평가하기</string>
    <string name="version">버전정보</string>
    <string name="email">개발자에게 이메일</string>
    <string name="etc">기타</string>
</resources>
