<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:tint="@color/colorPrimary"
            android:scaleType="centerCrop"
            android:tintMode="multiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_menu_bar_height">

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_gravity="right"
                android:background="?android:attr/selectableItemBackground"
                android:padding="12dp"
                android:scaleType="centerInside"
                android:layout_marginTop="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_delete_forever_black_48dp"
                android:tint="@color/white"/>

        </FrameLayout>

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginRight="@dimen/big_margin"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="55dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameText"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:background="@color/transparent"
                android:text="name"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:hint="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/schoolText"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:text="school"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/extra_margin"
                android:layout_marginLeft="@dimen/big_margin"
                android:layout_marginRight="@dimen/big_margin"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/callBtn"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_call_black_48dp"
                    android:tint="@color/disableText"
                    android:scaleType="centerInside"
                    android:padding="@dimen/small_margin"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textColor="@color/disableText"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/phone_number"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/phoneNumberText"
                            android:background="@color/transparent"
                            android:inputType="phone"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryText"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="000 0000 0000" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/big_margin"
                android:layout_marginRight="@dimen/big_margin"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/pCallBtn"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_call_black_48dp"
                    android:tint="@color/disableText"
                    android:scaleType="centerInside"
                    android:padding="@dimen/small_margin"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textColor="@color/disableText"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/parent_phone_number"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/pPhoneNumberText"
                            android:background="@color/transparent"
                            android:inputType="phone"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryText"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="000 0000 0000" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/big_margin"
                android:layout_marginRight="@dimen/big_margin"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/mapBtn"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_location_on_black_48dp"
                    android:tint="@color/disableText"
                    android:scaleType="centerInside"
                    android:padding="@dimen/small_margin"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textColor="@color/disableText"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/address"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/addressText"
                            android:background="@color/transparent"
                            android:inputType="textPostalAddress"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryText"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:maxLines="2"
                            android:text="000 0000 0000" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/memoText"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginLeft="@dimen/extra_margin"
                android:layout_marginRight="@dimen/extra_margin"
                android:layout_marginBottom="50dp"
                android:gravity="top"
                android:background="@color/transparent"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/secondaryText"
                android:textSize="14sp"
                android:textStyle="bold"
                android:hint="@string/enter_memo" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/confirmBtn"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="30dp"
        app:cardElevation="12dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/colorPrimaryLight">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="?android:attr/selectableItemBackground" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/editBtn"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="30dp"
        app:cardElevation="12dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/edit"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="?android:attr/selectableItemBackground" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_gravity="center_horizontal"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        app:cardElevation="12dp"
        app:cardCornerRadius="60dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/boy"/>

    </android.support.v7.widget.CardView>


</FrameLayout>